--- a/docs/latex/bignum_8h.tex
+++ b/docs/latex/bignum_8h.tex
@@ -13,8 +13,7 @@ Include dependency graph for bignum.\+h\+:\nopagebreak
 \includegraphics[width=153pt]{bignum_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -24,14 +23,14 @@ This graph shows which files directly or indirectly include this file\+:
 \subsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
-struct \hyperlink{structbignum__t}{bignum\+\_\+t}
+struct \hyperlink{structbignum}{bignum}
 \begin{DoxyCompactList}\small\item\em The type of a big number. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
-\#define \hyperlink{bignum_8h_aae679f6820f99b2e064916c3594c582a}{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE}~unsigned long
+\#define \hyperlink{bignum_8h_a0de324bbd28cbc60a55451dbae085a98}{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE}~unsigned long
 \begin{DoxyCompactList}\small\item\em Defines the datatype used by bignum\+\_\+elem\+\_\+t. \end{DoxyCompactList}\item 
-\#define \hyperlink{bignum_8h_adc0dc33688c900c97fa94c7a795554b1}{B\+I\+G\+N\+U\+M\+\_\+512}~(64 / sizeof(\hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}))
+\#define \hyperlink{bignum_8h_adc0dc33688c900c97fa94c7a795554b1}{B\+I\+G\+N\+U\+M\+\_\+512}~(64 / sizeof(\hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}))
 \begin{DoxyCompactList}\small\item\em array size required for 512 bit numbers \end{DoxyCompactList}\item 
 \#define \hyperlink{bignum_8h_acff115c908a413aa2479d2883fedec1b}{B\+I\+G\+N\+U\+M\+\_\+1024}~(\hyperlink{bignum_8h_adc0dc33688c900c97fa94c7a795554b1}{B\+I\+G\+N\+U\+M\+\_\+512}$\ast$2)
 \begin{DoxyCompactList}\small\item\em array size required for 1024 bit numbers \end{DoxyCompactList}\item 
@@ -42,24 +41,26 @@ struct \hyperlink{structbignum__t}{bignum\+\_\+t}
 \subsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
-typedef \hyperlink{bignum_8h_aae679f6820f99b2e064916c3594c582a}{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE} \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}
-\begin{DoxyCompactList}\small\item\em The type of the elements of a big number. \end{DoxyCompactList}\end{DoxyCompactItemize}
+typedef \hyperlink{bignum_8h_a0de324bbd28cbc60a55451dbae085a98}{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE} \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}
+\begin{DoxyCompactList}\small\item\em The type of the elements of a big number. \end{DoxyCompactList}\item 
+typedef struct \hyperlink{structbignum}{bignum} \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t}
+\begin{DoxyCompactList}\small\item\em The type of a big number. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \hyperlink{bignum_8h_a80f59ecb7ebfd0a18692a21805f7caa2}{bignum\+\_\+assoc} (\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$num, \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t} $\ast$arr, const size\+\_\+t num\+\_\+elements)
+void \hyperlink{bignum_8h_a80f59ecb7ebfd0a18692a21805f7caa2}{bignum\+\_\+assoc} (\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$num, \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t} $\ast$arr, const size\+\_\+t num\+\_\+elements)
 \begin{DoxyCompactList}\small\item\em Associate num\+\_\+elements in arr with num. \end{DoxyCompactList}\item 
-void \hyperlink{bignum_8h_ab18c6d897cc2114df5d05fd6d6e5c3c7}{bignum\+\_\+sync} (\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$num)
+void \hyperlink{bignum_8h_ab18c6d897cc2114df5d05fd6d6e5c3c7}{bignum\+\_\+sync} (\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$num)
 \begin{DoxyCompactList}\small\item\em Synchronize bignum metadata with the underlying memory. \end{DoxyCompactList}\item 
-void \hyperlink{bignum_8h_a3b1132294306db3daf600b2a88b341b3}{bignum\+\_\+zero} (\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$num)
+void \hyperlink{bignum_8h_a3b1132294306db3daf600b2a88b341b3}{bignum\+\_\+zero} (\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$num)
 \begin{DoxyCompactList}\small\item\em Zero out all memory associated with num. \end{DoxyCompactList}\item 
-int \hyperlink{bignum_8h_ac8664b4358b43e4fed6692dd26f47f13}{bignum\+\_\+set} (\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$rop, const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$op)
+int \hyperlink{bignum_8h_ac8664b4358b43e4fed6692dd26f47f13}{bignum\+\_\+set} (\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$rop, const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$op)
 \item 
-int \hyperlink{bignum_8h_ad9e04b2f22d264e11f8fe35805416929}{bignum\+\_\+set\+\_\+ui} (\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$rop, const \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t} op)
+int \hyperlink{bignum_8h_ad9e04b2f22d264e11f8fe35805416929}{bignum\+\_\+set\+\_\+ui} (\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$rop, const \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t} op)
 \begin{DoxyCompactList}\small\item\em Set rop to the value of op. \end{DoxyCompactList}\item 
-int \hyperlink{bignum_8h_aa65b1d0f318d95c53cd9c4ca8a799051}{bignum\+\_\+cmp} (const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$op1, const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$op2)
+int \hyperlink{bignum_8h_aa65b1d0f318d95c53cd9c4ca8a799051}{bignum\+\_\+cmp} (const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$op1, const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$op2)
 \item 
-int \hyperlink{bignum_8h_a505aa030e32b81708fa8cceb01ecd600}{bignum\+\_\+cmp\+\_\+ui} (const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$op1, const \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t} op2)
+int \hyperlink{bignum_8h_a505aa030e32b81708fa8cceb01ecd600}{bignum\+\_\+cmp\+\_\+ui} (const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$op1, const \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t} op2)
 \end{DoxyCompactItemize}
 
 
@@ -117,7 +118,7 @@ Definition at line 71 of file bignum.\+h.
 \index{bignum.\+h@{bignum.\+h}!B\+I\+G\+N\+U\+M\+\_\+512@{B\+I\+G\+N\+U\+M\+\_\+512}}
 \index{B\+I\+G\+N\+U\+M\+\_\+512@{B\+I\+G\+N\+U\+M\+\_\+512}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{B\+I\+G\+N\+U\+M\+\_\+512}{BIGNUM\_512}}
-{\footnotesize\ttfamily \#define B\+I\+G\+N\+U\+M\+\_\+512~(64 / sizeof(\hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}))}
+{\footnotesize\ttfamily \#define B\+I\+G\+N\+U\+M\+\_\+512~(64 / sizeof(\hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}))}
 
 
 
@@ -127,11 +128,11 @@ array size required for 512 bit numbers
 
 Definition at line 65 of file bignum.\+h.
 
-\mbox{\Hypertarget{bignum_8h_aae679f6820f99b2e064916c3594c582a}\label{bignum_8h_aae679f6820f99b2e064916c3594c582a}} 
-\index{bignum.\+h@{bignum.\+h}!B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE@{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE}}
-\index{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE@{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE}!bignum.\+h@{bignum.\+h}}
-\subsubsection{\texorpdfstring{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE}{BIGNUM\_TYPE}}
-{\footnotesize\ttfamily \#define B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE~unsigned long}
+\mbox{\Hypertarget{bignum_8h_a0de324bbd28cbc60a55451dbae085a98}\label{bignum_8h_a0de324bbd28cbc60a55451dbae085a98}} 
+\index{bignum.\+h@{bignum.\+h}!B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE@{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE}}
+\index{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE@{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE}!bignum.\+h@{bignum.\+h}}
+\subsubsection{\texorpdfstring{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE}{BIGNUM\_ELEM\_TYPE}}
+{\footnotesize\ttfamily \#define B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE~unsigned long}
 
 
 
@@ -141,22 +142,22 @@ You can change the default value by defining B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE yo
 
 With 32bit unsigned ints this code will set B\+I\+G\+N\+U\+M\+\_\+512 to 16. 
 \begin{DoxyCode}
-\textcolor{preprocessor}{#define BIGNUM\_TYPE unsigned int}
+\textcolor{preprocessor}{#define BIGNUM\_ELEM\_TYPE unsigned int}
 \textcolor{preprocessor}{#include "bignum.h"}
 \end{DoxyCode}
 
 
 With 8 bit unsigned chars this code will set B\+I\+G\+N\+U\+M\+\_\+512 to 64. 
 \begin{DoxyCode}
-\textcolor{preprocessor}{#define BIGNUM\_TYPE unsigned char}
+\textcolor{preprocessor}{#define BIGNUM\_ELEM\_TYPE unsigned char}
 \textcolor{preprocessor}{#include "bignum.h"}
 \end{DoxyCode}
 
 
-In both cases the maximum value represented by a \hyperlink{structbignum__t}{bignum\+\_\+t} used with B\+I\+G\+N\+U\+M\+\_\+512 will be 2$^\wedge$512 -\/ 1.
+In both cases the maximum value represented by a bignum\+\_\+t used with B\+I\+G\+N\+U\+M\+\_\+512 will be 2$^\wedge$512 -\/ 1.
 
 \begin{DoxyWarning}{Warning}
-Setting B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE to a signed datatype will result in undefined behavoir. 
+Setting B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE to a signed datatype will result in undefined behavoir. 
 \end{DoxyWarning}
 
 
@@ -165,11 +166,11 @@ Definition at line 42 of file bignum.\+h.
 
 
 \subsection{Typedef Documentation}
-\mbox{\Hypertarget{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}\label{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}} 
+\mbox{\Hypertarget{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}\label{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}} 
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+elem\+\_\+t@{bignum\+\_\+elem\+\_\+t}}
 \index{bignum\+\_\+elem\+\_\+t@{bignum\+\_\+elem\+\_\+t}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+elem\+\_\+t}{bignum\_elem\_t}}
-{\footnotesize\ttfamily typedef \hyperlink{bignum_8h_aae679f6820f99b2e064916c3594c582a}{B\+I\+G\+N\+U\+M\+\_\+\+T\+Y\+PE} \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}}
+{\footnotesize\ttfamily typedef \hyperlink{bignum_8h_a0de324bbd28cbc60a55451dbae085a98}{B\+I\+G\+N\+U\+M\+\_\+\+E\+L\+E\+M\+\_\+\+T\+Y\+PE} \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}}
 
 
 
@@ -179,14 +180,24 @@ The type of the elements of a big number.
 
 Definition at line 46 of file bignum.\+h.
 
+\mbox{\Hypertarget{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}\label{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}} 
+\index{bignum.\+h@{bignum.\+h}!bignum\+\_\+t@{bignum\+\_\+t}}
+\index{bignum\+\_\+t@{bignum\+\_\+t}!bignum.\+h@{bignum.\+h}}
+\subsubsection{\texorpdfstring{bignum\+\_\+t}{bignum\_t}}
+{\footnotesize\ttfamily typedef struct \hyperlink{structbignum}{bignum}  \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t}}
 
+
+
+The type of a big number. 
+
+More description  None of the members of bignum\+\_\+t should be changed by the user. Doing so can result in undefined behavoir and segmentation faults. 
 
 \subsection{Function Documentation}
 \mbox{\Hypertarget{bignum_8h_a80f59ecb7ebfd0a18692a21805f7caa2}\label{bignum_8h_a80f59ecb7ebfd0a18692a21805f7caa2}} 
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+assoc@{bignum\+\_\+assoc}}
 \index{bignum\+\_\+assoc@{bignum\+\_\+assoc}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+assoc()}{bignum\_assoc()}}
-{\footnotesize\ttfamily void bignum\+\_\+assoc (\begin{DoxyParamCaption}\item[{\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{num,  }\item[{\hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t} $\ast$}]{arr,  }\item[{const size\+\_\+t}]{num\+\_\+elements }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void bignum\+\_\+assoc (\begin{DoxyParamCaption}\item[{\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{num,  }\item[{\hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t} $\ast$}]{arr,  }\item[{const size\+\_\+t}]{num\+\_\+elements }\end{DoxyParamCaption})}
 
 
 
@@ -196,8 +207,8 @@ After calling \hyperlink{bignum_8h_a80f59ecb7ebfd0a18692a21805f7caa2}{bignum\+\_
 
 This code will create an array big enough to hold a 1024 bit number and associate the variable x with it\+: 
 \begin{DoxyCode}
-\hyperlink{structbignum__t}{bignum\_t} x;
-\hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\_elem\_t} x\_elements[\hyperlink{bignum_8h_acff115c908a413aa2479d2883fedec1b}{BIGNUM\_1024}];
+\hyperlink{structbignum}{bignum\_t} x;
+\hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\_elem\_t} x\_elements[\hyperlink{bignum_8h_acff115c908a413aa2479d2883fedec1b}{BIGNUM\_1024}];
 \hyperlink{bignum_8c_a80f59ecb7ebfd0a18692a21805f7caa2}{bignum\_assoc}(&x, x\_elements, \hyperlink{bignum_8h_acff115c908a413aa2479d2883fedec1b}{BIGNUM\_1024});
 \end{DoxyCode}
 
@@ -219,9 +230,9 @@ Definition at line 17 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+cmp@{bignum\+\_\+cmp}}
 \index{bignum\+\_\+cmp@{bignum\+\_\+cmp}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+cmp()}{bignum\_cmp()}}
-{\footnotesize\ttfamily int bignum\+\_\+cmp (\begin{DoxyParamCaption}\item[{const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{op1,  }\item[{const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{op2 }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int bignum\+\_\+cmp (\begin{DoxyParamCaption}\item[{const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{op1,  }\item[{const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{op2 }\end{DoxyParamCaption})}
 
-Compare two numbers of type \hyperlink{structbignum__t}{bignum\+\_\+t}
+Compare two numbers of type bignum\+\_\+t
 
 -\/1 if op1 $<$ op2, 1 if op1 $>$ op2 and 0 if both are equal. 
 
@@ -231,9 +242,9 @@ Definition at line 69 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+cmp\+\_\+ui@{bignum\+\_\+cmp\+\_\+ui}}
 \index{bignum\+\_\+cmp\+\_\+ui@{bignum\+\_\+cmp\+\_\+ui}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+cmp\+\_\+ui()}{bignum\_cmp\_ui()}}
-{\footnotesize\ttfamily int bignum\+\_\+cmp\+\_\+ui (\begin{DoxyParamCaption}\item[{const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{op1,  }\item[{const \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}}]{op2 }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int bignum\+\_\+cmp\+\_\+ui (\begin{DoxyParamCaption}\item[{const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{op1,  }\item[{const \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}}]{op2 }\end{DoxyParamCaption})}
 
-Compare a \hyperlink{structbignum__t}{bignum\+\_\+t} with a bignum\+\_\+elem\+\_\+t.
+Compare a bignum\+\_\+t with a bignum\+\_\+elem\+\_\+t.
 
 -\/1 if op1 $<$ op2, 1 if op1 $>$ op2 and 0 if both are equal. 
 
@@ -243,7 +254,7 @@ Definition at line 86 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+set@{bignum\+\_\+set}}
 \index{bignum\+\_\+set@{bignum\+\_\+set}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+set()}{bignum\_set()}}
-{\footnotesize\ttfamily int bignum\+\_\+set (\begin{DoxyParamCaption}\item[{\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{rop,  }\item[{const \hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{op }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int bignum\+\_\+set (\begin{DoxyParamCaption}\item[{\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{rop,  }\item[{const \hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{op }\end{DoxyParamCaption})}
 
 
 
@@ -253,7 +264,7 @@ Definition at line 36 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+set\+\_\+ui@{bignum\+\_\+set\+\_\+ui}}
 \index{bignum\+\_\+set\+\_\+ui@{bignum\+\_\+set\+\_\+ui}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+set\+\_\+ui()}{bignum\_set\_ui()}}
-{\footnotesize\ttfamily int bignum\+\_\+set\+\_\+ui (\begin{DoxyParamCaption}\item[{\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{rop,  }\item[{const \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}}]{op }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int bignum\+\_\+set\+\_\+ui (\begin{DoxyParamCaption}\item[{\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{rop,  }\item[{const \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}}]{op }\end{DoxyParamCaption})}
 
 
 
@@ -267,7 +278,7 @@ Definition at line 48 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+sync@{bignum\+\_\+sync}}
 \index{bignum\+\_\+sync@{bignum\+\_\+sync}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+sync()}{bignum\_sync()}}
-{\footnotesize\ttfamily void bignum\+\_\+sync (\begin{DoxyParamCaption}\item[{\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{num }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void bignum\+\_\+sync (\begin{DoxyParamCaption}\item[{\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{num }\end{DoxyParamCaption})}
 
 
 
@@ -281,7 +292,7 @@ Definition at line 9 of file bignum.\+c.
 \index{bignum.\+h@{bignum.\+h}!bignum\+\_\+zero@{bignum\+\_\+zero}}
 \index{bignum\+\_\+zero@{bignum\+\_\+zero}!bignum.\+h@{bignum.\+h}}
 \subsubsection{\texorpdfstring{bignum\+\_\+zero()}{bignum\_zero()}}
-{\footnotesize\ttfamily void bignum\+\_\+zero (\begin{DoxyParamCaption}\item[{\hyperlink{structbignum__t}{bignum\+\_\+t} $\ast$}]{num }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void bignum\+\_\+zero (\begin{DoxyParamCaption}\item[{\hyperlink{bignum_8h_a13ef0ccf0abd8ee44826b6930b62b912}{bignum\+\_\+t} $\ast$}]{num }\end{DoxyParamCaption})}
 
 
 
