--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -143,7 +143,7 @@
 \chapter{File Index}
 \input{files}
 \chapter{Class Documentation}
-\input{structbignum__t}
+\input{structbignum}
 \chapter{File Documentation}
 \input{bignum_8c}
 \input{bignum_8h}
