--- a/docs/latex/test_8c.tex
+++ b/docs/latex/test_8c.tex
@@ -1,16 +1,14 @@
 \hypertarget{test_8c}{}\section{tests/test.c File Reference}
 \label{test_8c}\index{tests/test.\+c@{tests/test.\+c}}
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
-Include dependency graph for test.\+c\+:
-\nopagebreak
+Include dependency graph for test.\+c\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=146pt]{test_8c__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
