--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,4 +1,4 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{structbignum__t}{bignum\+\_\+t} \\*The type of a big number }{\pageref{structbignum__t}}{}
+\item\contentsline{section}{\hyperlink{structbignum}{bignum} \\*The type of a big number }{\pageref{structbignum}}{}
 \end{DoxyCompactList}
