--- a/docs/latex/structbignum.tex
+++ b/docs/latex/structbignum.tex
@@ -16,14 +16,18 @@ size\+\_\+t \hyperlink{structbignum_a5cec444ac0a9e7b44a073dbb0f0bf915}{length}
 \item 
 size\+\_\+t \hyperlink{structbignum_aca95f5f27d2bb952cb8a6f906a138e62}{max\+\_\+length}
 \item 
-\hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t} $\ast$ \hyperlink{structbignum_a60955e5f7046ec12c4c292510ad18146}{v}
+\hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t} $\ast$ \hyperlink{structbignum_a60955e5f7046ec12c4c292510ad18146}{v}
 \end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
 The type of a big number. 
 
-More description More description 
+More description  None of the members of bignum\+\_\+t should be changed by the user. Doing so can result in undefined behavoir and segmentation faults. 
+
+Definition at line 55 of file bignum.\+h.
+
+
 
 \subsection{Member Data Documentation}
 \mbox{\Hypertarget{structbignum_a5cec444ac0a9e7b44a073dbb0f0bf915}\label{structbignum_a5cec444ac0a9e7b44a073dbb0f0bf915}} 
@@ -32,19 +36,31 @@ More description More description
 \subsubsection{\texorpdfstring{length}{length}}
 {\footnotesize\ttfamily size\+\_\+t bignum\+::length}
 
-The number of elements this bignum actually uses. \mbox{\Hypertarget{structbignum_aca95f5f27d2bb952cb8a6f906a138e62}\label{structbignum_aca95f5f27d2bb952cb8a6f906a138e62}} 
+The number of elements this bignum actually uses. 
+
+Definition at line 57 of file bignum.\+h.
+
+\mbox{\Hypertarget{structbignum_aca95f5f27d2bb952cb8a6f906a138e62}\label{structbignum_aca95f5f27d2bb952cb8a6f906a138e62}} 
 \index{bignum@{bignum}!max\+\_\+length@{max\+\_\+length}}
 \index{max\+\_\+length@{max\+\_\+length}!bignum@{bignum}}
 \subsubsection{\texorpdfstring{max\+\_\+length}{max\_length}}
 {\footnotesize\ttfamily size\+\_\+t bignum\+::max\+\_\+length}
 
-The number of elements this bignum can hold. \mbox{\Hypertarget{structbignum_a60955e5f7046ec12c4c292510ad18146}\label{structbignum_a60955e5f7046ec12c4c292510ad18146}} 
+The number of elements this bignum can hold. 
+
+Definition at line 59 of file bignum.\+h.
+
+\mbox{\Hypertarget{structbignum_a60955e5f7046ec12c4c292510ad18146}\label{structbignum_a60955e5f7046ec12c4c292510ad18146}} 
 \index{bignum@{bignum}!v@{v}}
 \index{v@{v}!bignum@{bignum}}
 \subsubsection{\texorpdfstring{v}{v}}
-{\footnotesize\ttfamily \hyperlink{bignum_8h_ac19e9b7c8236cb1d9e8b4bf16d0ce513}{bignum\+\_\+elem\+\_\+t}$\ast$ bignum\+::v}
+{\footnotesize\ttfamily \hyperlink{bignum_8h_a8a2940600ccf96356e2a21b453d3bd92}{bignum\+\_\+elem\+\_\+t}$\ast$ bignum\+::v}
 
 A pointer to the actual values of this bignum. 
+
+Definition at line 61 of file bignum.\+h.
+
+
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
